Fixed review and sonar comments, removed asterisk and redundant imports