@@ -1,14 +1,13 @@
 package com.eleks.academy.whoami.core.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.eleks.academy.whoami.core.Player;
 import com.eleks.academy.whoami.core.Turn;
 
 public class TurnImpl implements Turn {
 	
-	private List<Player> players;
+	private final List<Player> players;
 	private int currentPlayerIndex = 0;
 	
 	public TurnImpl(List<Player> players) {
@@ -24,7 +23,7 @@ public class TurnImpl implements Turn {
 	public List<Player> getOtherPlayers() {
 		return this.players.stream()
 				.filter(player -> !player.getName().equals(this.getGuesser().getName()))
-				.collect(Collectors.toList());
+				.toList();
 	}
 	
 	@Override
